logs/django-paging.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_paging-0.2.5.egg-info'...
Listing './lib/python3.5/site-packages/django_templatetag_sugar-1.0.dist-info'...
Listing './lib/python3.5/site-packages/paging'...
Compiling './lib/python3.5/site-packages/paging/__init__.py'...
***   File "./lib/python3.5/site-packages/paging/__init__.py", line 4
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/paging/paginators.py'...
***   File "./lib/python3.5/site-packages/paging/paginators.py", line 18
    except (ValueError, TypeError), exc:
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/paging/templates'...
Listing './lib/python3.5/site-packages/paging/templates/paging'...
Listing './lib/python3.5/site-packages/paging/templatetags'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/templatetag_sugar'...
Listing './share'...
Listing './share/python-wheels'...
